--- a/configs/i3/config
+++ b/configs/i3/config
@@ -171,7 +171,7 @@ mode "screenshot" {
 	bindsym w exec gnome-screenshot -w
 
 	# Sélection
-	bindsym s exec gnome-screenshot -a
+	bindsym --release s exec gnome-screenshot -a
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
